# iron-wilds

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yaml  ci.yaml  fmt.yaml  fmt_check_test.yaml  lint.yaml  test.yaml
data/: recipe_crafting.csv
docs/: template_plugin.md
src/: inputs.rs  items.rs  lib.rs  main.rs  physics.rs  player.rs  setup.rs
src/components/: graphics.rs  items.rs  mobs.rs  mod.rs  physics.rs  player.rs  storage.rs  ui.rs
src/data/: load_recipe_crafting.rs  mod.rs  recipes.rs
src/events/: inventory.rs  items.rs  mobs.rs  mod.rs
src/game/items/: load.rs  mod.rs  store.rs
src/items/: components.rs  game_items.rs  mod.rs  plugin.rs  tests.rs
src/logic/items/: config.rs  load.rs  mod.rs  store.rs
src/plugins/: debugging.rs  graphics.rs  inputs.rs  inventory.rs  items.rs  mobs.rs  physics.rs  player.rs  setup.rs  ui.rs
src/resources/: debugging.rs  inputs.rs  inventory.rs  item.rs  mod.rs  physics.rs  player.rs
src/resources/item/: config.rs  store.rs
src/resources/items/: config.rs  load.rs  load_food.rs  load_weapons.rs  mod.rs  utils.rs
src/resources/mobs/: config.rs  mod.rs
src/resources/recipes/: mod.rs
src/systems/: debugging.rs  inputs.rs  inventory.rs  items.rs  mobs.rs  mod.rs  physics.rs  player.rs  setup.rs  terrain.rs  ui.rs
src/systems/experiments/: mod.rs
src/tests/: inventory.rs  items.rs  mod.rs  recipes.rs  storage.rs
src/utils/: mod.rs
