[package]
name = "iron-wilds"
version = "0.1.0"
edition = "2021"
default-run = "iron-wilds"

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_prototype_lyon = "0.9.0"
rand = "0.8.5"
bevy-inspector-egui = "0.20.0"
clearscreen = "2.0.1"


[target.'cfg(unix)'.dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking", "wayland"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
