[package]
name = "iron-wilds"
version = "0.1.0"
edition = "2021"
default-run = "iron-wilds"

[dependencies]
bevy = "0.12.0"
rand = "0.8.5"
bevy-inspector-egui = "0.21.0"

[target.'cfg(unix)'.dependencies]
bevy = { version = "0.12.0", features = ["wayland"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0
incremental = true
debug = 1
lto = false
debug-assertions = true
overflow-checks = true
codegen-units = 512

[profile.test.package."*"]
opt-level = 0
incremental = true
debug = 1
debug-assertions = true
overflow-checks = true
codegen-units = 512
